# virgil-messenger-qt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  VERSION_CORE  demo-iotkit-qt.pro  deploy_android.sh  release-notes.html  required.txt  test_build_android.sh  test_build_ios.sh  virgil-messenger.pro
example/: CMakeLists.txt
example/include/: VSInfoGeneralController.h  VSInfoGeneralModel.h  VSQApp.h  VSQController.h  VSQDeviceInfoController.h  VSQDeviceInfoModel.h  VSQInfoGeneralController.h  VSQInfoGeneralModel.h  VSQMainWindow.h  app.h  controller.h  fake_vs_info_general_t.h
example/src/: VSInfoGeneralController.cpp  VSInfoGeneralModel.cpp  VSQApp.cpp  VSQController.cpp  VSQDeviceInfoController.cpp  VSQDeviceInfoModel.cpp  VSQInfoGeneralController.cpp  VSQInfoGeneralModel.cpp  VSQMainWindow.cpp  app.cpp  controller.cpp  main.c  main.cpp
info-client/: CMakeLists.txt
info-client/src/: main.cpp  main_window.cpp  statistics.cpp
iotkit/: CMakeLists.txt
iotkit-qt/: CMakeLists.txt
iotkit-qt/src/: hal.cpp  helpers.cpp  netif-udp.cpp  snap-info.cpp  snap_info.cpp  snap_protocol.cpp  snap_service.cpp  snap_udp.cpp
iotkit/include/: VSQAppConfig.h  VSQDeviceRoles.h  VSQDeviceSerial.h  VSQDeviceType.h  VSQFeatures.h  VSQFileVersion.h  VSQImplementations.h  VSQIoTKit.h  VSQIoTKitFacade.h  VSQIoTKitFeatures.h  VSQIoTKitImplContainer.h  VSQLogger.h  VSQMac.h  VSQManufactureId.h  VSQSingleton.h
iotkit/src/: VSQDeviceRoles.cpp  VSQDeviceSerial.cpp  VSQDeviceType.cpp  VSQFileVersion.cpp  VSQIoTKitFacade.cpp  VSQMac.cpp  VSQManufactureId.cpp
src/: AccountSelectionModel.cpp  Application.cpp  CMakeLists.txt  Client.cpp  ClipboardProxy.cpp  CloudFile.cpp  CloudFileId.cpp  CloudFileMember.cpp  CloudFileSystem.cpp  Common.cpp  ContactAvatarLoader.cpp  Core.cpp  CrashReporter.cpp  CustomerEnv.cpp  Database.cpp  FileLoader.cpp  KeyboardEventFilter.cpp  Messenger.cpp  QmlEngine.cpp  Settings.cpp  TimeProfiler.cpp  TimeProfilerSection.cpp  Utils.cpp  VSQApp.cpp  VSQApplication.cpp  VSQAttachmentBuilder.cpp  VSQAttachmentsManager.cpp  VSQAttachmentsModel.cpp  VSQClipboardProxy.cpp  VSQCommon.cpp  VSQContactManager.cpp  VSQController.cpp  VSQCore.cpp  VSQCrashReporter.cpp  VSQCryptoTransferManager.cpp  VSQDeviceInfoController.cpp  VSQDeviceInfoModel.cpp  VSQDiscoveryManager.cpp  VSQDownload.cpp  VSQLastActivityIq.cpp  (+25 more)
src/android/: VSQAndroid.cpp  VSQFirebaseListener.cpp
src/client/: Client.cpp  Uploader.cpp  VSQClient.cpp  VSQCore.cpp  VSQUploader.cpp  VirgilClient.cpp  VirgilClient.h  main.cpp
src/comm-kit/: CommKitBridge.cpp  CommKitMessenger.cpp  CommKitUser.cpp
src/controllers/: AttachmentsController.cpp  ChatsController.cpp  CloudFilesController.cpp  Controller.cpp  Controllers.cpp  DocumentInteractionController.cpp  FileCloudController.cpp  MessagesController.cpp  UsersController.cpp
src/database/: AttachmentsModel.cpp  AttachmentsTable.cpp  ChatsModel.cpp  ChatsTable.cpp  CloudFilesTable.cpp  ContactsTable.cpp  Database.cpp  DatabaseTable.cpp  GroupEpochsTable.cpp  GroupMembersTable.cpp  GroupsTable.cpp  MessagesTable.cpp  MessengerDatabase.cpp  UserDatabase.cpp  UserDatabaseMigration.cpp  VSQAttachmentsModel.cpp  VSQChatsModel.cpp  VSQConversationsModel.cpp  VSQDatabase.cpp
src/helpers/: FileUtils.cpp  FormatUtils.cpp  UidUtils.cpp
src/ios/: APNSApplicationDelegate.mm  NotificationService.mm  VSQIOSApplicationDelegate.mm  ios-native.swift  test-swift.swift
src/logging/: LogConfig.cpp  LogWorker.cpp  Logging.cpp  VSQLogWorker.cpp  VSQLogging.cpp
src/mac/: VSQMacos.mm
src/macos/: VSQMacos.mm
src/messages/: Messages.cpp
src/messenger/: AttachmentId.cpp  Chat.cpp  ChatId.cpp  ChatType.cpp  CloudFileId.cpp  CloudFsFileId.cpp  CloudFsFileInfo.cpp  CloudFsFolderId.cpp  CloudFsSharedGroupId.cpp  CommKitBridge.cpp  Contact.cpp  ContactUpdate.cpp  CoreMessenger.cpp  CoreMessengerCloudFs.cpp  Group.cpp  GroupAffiliation.cpp  GroupId.cpp  GroupInvitationStatus.cpp  GroupMember.cpp  GroupUpdate.cpp  IncomingMessage.cpp  IncomingMessageStage.cpp  Message.cpp  MessageContentAttachment.cpp  MessageContentDownloadStage.cpp  MessageContentEncrypted.cpp  MessageContentFile.cpp  MessageContentGroupInvitation.cpp  MessageContentJsonUtils.cpp  MessageContentPicture.cpp  MessageContentPictureFactory.cpp  MessageContentText.cpp  MessageContentType.cpp  MessageContentUploadStage.cpp  MessageGroupChatInfo.cpp  MessageId.cpp  MessageRequest.cpp  MessageStatus.cpp  MessageUpdate.cpp  OutgoingMessage.cpp  (+3 more)
src/models/: AccountSelectionModel.cpp  AttachmentBuilder.cpp  AttachmentsModel.cpp  AttachmentsQueue.cpp  ChatObject.cpp  ChatsModel.cpp  CloudFileMembersModel.cpp  CloudFileObject.cpp  CloudFileOperationSource.cpp  CloudFilePropertiesModel.cpp  CloudFilesModel.cpp  CloudFilesProgressModel.cpp  CloudFilesQueue.cpp  CloudFilesQueueListeners.cpp  CloudFilesTransfersModel.cpp  CloudFilesUploader.cpp  ContactsModel.cpp  ContactsProxyModel.cpp  DiscoveredContactsModel.cpp  DiscoveredContactsProxyModel.cpp  FileCloudModel.cpp  FileCloudQueue.cpp  FileCloudUploader.cpp  FileLoader.cpp  FilesProgressModel.cpp  GroupMembersModel.cpp  ListModel.cpp  ListProxyModel.cpp  ListSelectionModel.cpp  MessageOperation.cpp  MessageOperationSource.cpp  MessagesModel.cpp  MessagesProxyModel.cpp  MessagesQueue.cpp  MessagesQueueListeners.cpp  Model.cpp  Models.cpp  Operation.cpp  OperationQueue.cpp  SendMessageOperation.cpp  (+8 more)
src/notifications/: PushNotifications.cpp  XmppPushNotifications.cpp
src/operations/: CalculateAttachmentFingerprintOperation.cpp  CalculateFileFingerprintOperation.cpp  CloudFileOperation.cpp  ConvertImageFormatOperation.cpp  ConvertToPngOperation.cpp  CopyFileOperation.cpp  CreateAttachmentPreviewOperation.cpp  CreateAttachmentThumbnailOperation.cpp  CreateCloudFolderOperation.cpp  CreateThumbnailOperation.cpp  DecryptFileOperation.cpp  DeleteCloudFilesOperation.cpp  DownloadAttachmentOperation.cpp  DownloadCloudFileOperation.cpp  DownloadDecryptFileOperation.cpp  DownloadFileOperation.cpp  EncryptFileOperation.cpp  EncryptUploadFileOperation.cpp  Operation.cpp  (+15 more)
(+896 files in other folders)
